# TrailInspector

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  RELEASE.md  RULES.md
.github/workflows/: build.yml  ci.yml  release.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: lib.rs  main.rs  state.rs
crates/app/src/commands/: custom_rules.rs  detection.rs  export.rs  geoip.rs  ingest.rs  mod.rs  query.rs  s3.rs  session.rs  stats.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  export.rs  geoip.rs  lib.rs  model.rs  s3.rs  session.rs  stats.rs
crates/core/src/detection/: custom_rules.rs  mod.rs  tests.rs
crates/core/src/detection/rules/: credential_access.rs  defense_evasion.rs  discovery.rs  ebs.rs  exfiltration.rs  geo_anomaly.rs  impact.rs  initial_access.rs  lambda.rs  mod.rs  network.rs  persistence.rs  persistence_ext.rs  rds.rs  resource_sharing.rs
crates/core/src/ingest/: decompress.rs  discovery.rs  mod.rs  parser.rs
crates/core/src/query/: engine.rs  filter.rs  mod.rs  parser.rs
crates/core/src/store/: blob_store.rs  mod.rs  store.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/detection/: AlertDetail.tsx  AlertPanel.tsx  DetectionView.tsx
ui/src/components/ingest/: DropZone.tsx
ui/src/components/ip/: IpView.tsx
ui/src/components/layout/: AppShell.tsx  GlobalTimeBar.tsx  Sidebar.tsx  StatusBar.tsx
ui/src/components/results/: EventDetail.tsx  EventTable.tsx
ui/src/components/s3/: S3View.tsx
ui/src/components/search/: FilterPanel.tsx  QueryBar.tsx
ui/src/components/session/: SessionDetail.tsx  SessionView.tsx
ui/src/components/viz/: FieldStats.tsx  IdentityTimeline.tsx  TimelineChart.tsx
ui/src/lib/: tauri.ts
ui/src/styles/: globals.css
ui/src/types/: cloudtrail.ts
