[package]
name = "trail-inspector-app"
version = "0.1.1"
edition = "2021"
authors = ["Warawut Manosong <chicken0248@github>"]
description = "AWS CloudTrail log analyzer — Tauri desktop app"
license = "MIT"
repository = "https://github.com/Chicken0248/TrailInspector"
homepage = "https://github.com/Chicken0248/TrailInspector"

[lib]
name = "trail_inspector_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
trail-inspector-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
