[package]
name = "trail-inspector-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
zip = "2"
walkdir = "2"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
