[package]
name = "trail-inspector-core"
version = "0.1.1"
edition = "2021"
authors = ["Warawut Manosong <chicken0248@github>"]
description = "Core parsing, indexing, query, and detection library for TrailInspector"
license = "MIT"
repository = "https://github.com/Chicken0248/TrailInspector"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
zip = "2"
walkdir = "2"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
