[package]
name = "trail-inspector-core"
version = "1.3.0"
edition = "2021"
authors = ["Warawut Manosong <chicken0248@github>"]
description = "Core parsing, indexing, query, and detection library for TrailInspector"
license = "MIT"
repository = "https://github.com/Chicken0248/TrailInspector"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
zip = "2"
walkdir = "2"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
maxminddb = "0.24"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[dependencies.tempfile]
version = "3"

[dependencies.memmap2]
version = "0.9"
